- Fixed bug #48514 (cURL extension uses same resource name for simple and multi APIs)